[#157394547] Fixed header icon styles on mobile.
(cherry picked from commit 73684ca)

--- a/reactjs/components/atoms/HeaderIcon/_styles.scss
+++ b/reactjs/components/atoms/HeaderIcon/_styles.scss
@@ -2,25 +2,46 @@
   height: 100%;
   display: inline-flex;
   align-items: center;
-  margin: 0 0.6em;
+  padding: 0 0.6em;
   text-align: center;
+  flex-flow: column;
+  justify-content: center;
+  cursor: pointer;
+
+  @include media-breakpoint-up(md) {
+    padding-top: 5px;
+    margin: 0 0.5em;
+  }
 
   .icon {
     width: 1.3em;
     height: 1.3em;
+    @include media-breakpoint-up(md) {
+      width: 2.5em;
+      height: 2.5em;
+    }
 
     svg {
       max-width: 100%;
       max-height: 100%;
-
-      &:hover path {
-        fill: $gray91;
-        transition: all .2s;
-      }
     }
   }
+  &:hover svg path {
+    fill: $gray91;
+    transition: fill .2s;
+  }
+  &:active svg path {
+    fill: darken($gray91, 6);
+  }
+
   .label {
     display: none;
+    color: $white;
+    font-size: 0.875em;
+
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
   }
 }
 
